test/parser.d/invalid/reassign1.surc.bad
main() = do
	x: Int <- 2
	x = 5
	print $x
